--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "release": "node scripts/release.js",
     "build": "node scripts/build.js",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
+    "test": "jest"
   },
   "devDependencies": {
     "@types/jest": "^27.0.3",
